--- a/tsconfig.json
+++ b/tsconfig.json
@@ -11,6 +11,6 @@
     "**/*.tsx",
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
-    "nativewind-env.d.ts"
+    "Finansal Takip-env.d.ts"
   ]
 }
